--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
 
       <p class="scrolldown">
-         <a class="smoothscroll" href="#about"><i class="fab fa-angle-double-down"></i></a>
+         <a class="smoothscroll" href="#about"><i class="fas fa-angle-double-down"></i></a>
       </p>
 
       <div class="header-overlay"></div>
